--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>valentine | QR code</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,400;1,200;1,300&family=Outfit:wght@400;700&family=Poppins:wght@100;200;300;400;600;700&family=Roboto:ital@0;1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -13,11 +16,7 @@
         <div class="code">
              <img src="/assets/image-qr-code.png" alt="">
              <h2>Improve your front-end<br> skills by building projects</h2>
-             <p>Scan the QR code to visit Front-end <br> and take your coding skills to <br>the next level</p>
-        </div>
-        <div class="attribution">
-            challange by <a href="https://www.frontendmentor.io?ref=challange" target="_blank">Frontend Mentor</a>
-           <br> coded by <a href="#">Valentine</a>
+             <p>Scan the QR code to visit Front-end <br> and take your coding skills to the next level</p>
         </div>
         </div>
     </section>
