--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
            <div class="platform">
         <div class="code">
              <img src="/assets/image-qr-code.png" alt="">
-             <h2>Improve your front-end<br> skills by building projects</h2>
-             <p>Scan the QR code to visit Front-end <br> and take your coding skills to the next level</p>
+             <h3>Improve your front-end<br>skills by building projects</h3>
+             <p>Scan the QR code to visit Frontend <br>Mentor and take your coding skills to<br> the next level</p>
         </div>
         </div>
     </section>
